--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,11 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "private, no-store, no-cache, must-revalidate"
+          "value": "private, no-cache, no-store, max-age=0, must-revalidate"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
         }
       ]
     }
